# -_-MATLAB-CUDA-

./: README.md  make.sh
图像倒置/: CMakeLists.txt  main.cpp
图像均值滤波/: imgfilter1.cpp
图像处理直方图均衡化/: CMakeLists.txt  main.cpp  mainCuda.cpp
图像相减/: imgSub.cpp
图像相加/: main-2.cpp  main_base.cpp
图像纹理内存滤波/: mainResize.cpp  mainSobel.cpp
图像高斯滤波/: main.cpp
模版匹配/: CMakeLists.txt  main.cpp
